kubernetes/flask-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask
  labels:
    name: flask
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: thieryl/vdia-test:latest
      restartPolicy: Always
