kubernetes/vue-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vue
  labels:
    name: vue
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
        - name: vue
          image: thieryl/vdia-vue:latest
      restartPolicy: Always
